fix: hide tag overflow, text styles

--- a/client/src/styles/components/_renku_search.scss
+++ b/client/src/styles/components/_renku_search.scss
@@ -130,7 +130,6 @@
 
 .rk-search-result-grid {
   display: flex;
-  margin-left: -1em;
   width: auto;
 
   .rk-search-result-grid_column {
