--- a/client/src/utils/components/sortingEntities/SortingEntities.css
+++ b/client/src/utils/components/sortingEntities/SortingEntities.css
@@ -1,5 +1,5 @@
 .sorting-label {
-    font-size: 16px;
+    font-size: larger;
     font-weight: bold;
 }
 
